force-app/main/default/objects/edynamics__caSettings__c/edynamics__caSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings specific to the ChatterArchive application package</description>
    <label>Chatter Archive Settings</label>
</CustomObject>