force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Admin_Email__c</fullName>
    <inlineHelpText>Administrative email address for notifications</inlineHelpText>
    <label>Admin Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>