force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__Communities_To_Capture__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Communities_To_Capture__c</fullName>
    <label>Communities To Capture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>