force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__CustomerLogo__c.field-meta.xml
<CustomField>
    <fullName>edynamics__CustomerLogo__c</fullName>
    <label>CustomerLogo</label>
    <type>Url</type>
</CustomField>