force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__Delivery_Mechanism__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Delivery_Mechanism__c</fullName>
    <label>Delivery Mechanism</label>
    <length>255</length>
    <type>Text</type>
</CustomField>