force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__Disable_Triggers__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Disable_Triggers__c</fullName>
    <description>A comma separated string of triggers that are disabled for the instance.  Supported triggers: FeedCommentAfter, FeedItemAfter, UserStatusBefore</description>
    <label>Disable Triggers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>