force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Disclaimer__c</fullName>
    <label>Disclaimer</label>
    <type>TextArea</type>
</CustomField>