force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__Display_Followers_in_Email__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Display_Followers_in_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to show record followers in email</description>
    <label>Display Followers in Email</label>
    <type>Checkbox</type>
</CustomField>