force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__EnableGroup__c.field-meta.xml
<CustomField>
    <fullName>edynamics__EnableGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, enables the app to function only for the group name specified.</description>
    <label>EnableGroup</label>
    <type>Checkbox</type>
</CustomField>