force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__Extend_Enable_Group_to_Non_Members__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Extend_Enable_Group_to_Non_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set, the comments sent by users not in the Enabled Group, we check if any person in the group has posted to the comment. If we find one, the comment is treated as if it was posted from someone in the group.</description>
    <inlineHelpText>When set, the comments sent by users not in the Enabled Group, we check if any person in the group has posted to the comment. If we find one, the comment is treated as if it was posted from someone in the group.</inlineHelpText>
    <label>Extend Enable Group to Non-Members</label>
    <type>Checkbox</type>
</CustomField>