force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__GroupName__c.field-meta.xml
<CustomField>
    <fullName>edynamics__GroupName__c</fullName>
    <description>If enable group is checked you must specify a group name here.</description>
    <label>GroupName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>