force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__Include_File_Attachments__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Include_File_Attachments__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked, file attachments from Chatter posts will be included in compliance email (if uploaded to Chatter post by user)</inlineHelpText>
    <label>Include File Attachments</label>
    <type>Checkbox</type>
</CustomField>