force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__Include_Full_Conversation_Thread__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Include_Full_Conversation_Thread__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include the original post and all the comments in the journal email each time someone adds a comments</description>
    <label>Include Full Conversation Thread?</label>
    <type>Checkbox</type>
</CustomField>