force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__Journaling_Email__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Journaling_Email__c</fullName>
    <description>Journaling email address, as defined by the client, for ChatterArchive</description>
    <inlineHelpText>Please enter your journaling address (where you want ChatterArchive to send email to)</inlineHelpText>
    <label>Journaling Email</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>