force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__SendEmail__c.field-meta.xml
<CustomField>
    <fullName>edynamics__SendEmail__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, email to journaling mailbox functionality is enabled</inlineHelpText>
    <label>Send Email?</label>
    <type>Checkbox</type>
</CustomField>