force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__SubjectSuffix__c.field-meta.xml
<CustomField>
    <fullName>edynamics__SubjectSuffix__c</fullName>
    <description>When set, AFC adds this field to the end of the subject of each journaling email</description>
    <label>Subject Suffix</label>
    <length>30</length>
    <type>Text</type>
</CustomField>