force-app/main/default/objects/edynamics__caSettings__c/fields/edynamics__Write_to_Custom_Object__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Write_to_Custom_Object__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, Archive for Chatter will write a copy of each chatter post/comment to custom SFDC object for reporting purposes.</inlineHelpText>
    <label>Write to Custom Object?</label>
    <type>Checkbox</type>
</CustomField>